--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<br>
+<div class="container">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore unde, praesentium possimus, minus deserunt enim est vero nesciunt laboriosam accusamus repellendus, voluptatibus hic? Mollitia nobis porro perferendis et neque pariatur.</p>
+</div>
