Componente de crear motocicleta

--- a/src/app/feature/motocicleta/components/motocicleta/motocicleta.component.html
+++ b/src/app/feature/motocicleta/components/motocicleta/motocicleta.component.html
@@ -3,7 +3,7 @@
     <h2>Lista de libros</h2>
     
     <div class="d-grid gap-2">
-      <a id="crear_motocicleta" class="btn btn-success" routerLink="/home">Crear Motocicleta</a>
+      <a id="crear_motocicleta" class="btn btn-success" routerLink="/crear-motocicleta">Crear Motocicleta</a>
     </div>
   
     <br>
