Test de componente crear motocicleta

--- a/src/app/feature/motocicleta/components/crear-motocicleta/crear-motocicleta.component.html
+++ b/src/app/feature/motocicleta/components/crear-motocicleta/crear-motocicleta.component.html
@@ -5,7 +5,7 @@
     <form action="container" [formGroup]="motocicletaForm" #registrarForm="ngForm">
       <div class="row">
         <div class="mb-3">
-          <label for="titulo" class="form-label">Nombre de la motocicleta</label>
+          <label for="nombre" class="form-label">Nombre de la motocicleta</label>
           <input
             validar
             type="text"
@@ -19,7 +19,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-md-6 mb-3">
-          <label for="cantidad" class="form-label">Valor de la motocicleta</label>
+          <label for="valorMotocicleta" class="form-label">Valor de la motocicleta</label>
           <input
             validar
             type="number"
@@ -31,7 +31,7 @@
           />
         </div>
         <div class="col-xs-12 col-md-6 mb-3">
-          <label for="precio" class="form-label">Año de modelo</label>
+          <label for="anioModelo" class="form-label">Año de modelo</label>
           <input
             validar
             type="number"
