Componente de Alquiler y Crear Alquiler junto con sus test unitarios creados

--- a/src/app/feature/alquiler/components/crear-alquiler/crear-alquiler.component.html
+++ b/src/app/feature/alquiler/components/crear-alquiler/crear-alquiler.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <br />
-    <h2>Registrar Motocicletas</h2>
+    <h2>Registrar Alquiler</h2>
   
-    <form action="container" [formGroup]="motocicletaForm" #registrarForm="ngForm">
+    <form action="container" [formGroup]="alquilerForm" #registrarForm="ngForm">
       <div class="row">
         <div class="mb-3">
           <label for="nombre" class="form-label">Nombre de la motocicleta</label>
@@ -56,4 +56,3 @@
       </div>
     </form>
 </div>
-  
