--- a/src/app/feature/motocicleta/components/motocicleta/motocicleta.component.html
+++ b/src/app/feature/motocicleta/components/motocicleta/motocicleta.component.html
@@ -1,10 +1,11 @@
 <div class="container">
     <br>
-    <h2>Lista de libros</h2>
+    <h2>Lista de Motocicletas</h2>
     
     <div class="d-grid gap-2">
       <a id="crear_motocicleta" class="btn btn-success" routerLink="/crear-motocicleta">Crear Motocicleta</a>
     </div>
-  
+
     <br>
+    <app-listar-motocicletas></app-listar-motocicletas>
   </div>
