Ng Bootstrap datepicker en el servicio de crear alquileres

--- a/src/app/feature/alquiler/components/alquiler/alquiler.component.html
+++ b/src/app/feature/alquiler/components/alquiler/alquiler.component.html
@@ -1,3 +1,7 @@
 <div>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptas in totam dolore, praesentium hic incidunt saepe voluptatibus perferendis voluptate velit nulla labore earum ducimus. Ea mollitia assumenda fuga dignissimos!
+
+    <div class="d-grid gap-2">
+        <a id="crear_alquiler" class="btn btn-success" routerLink="/crear-alquiler">Crear Alquiler</a>
+    </div>
 </div>
