--- a/src/app/feature/alquiler/components/alquiler/alquiler.component.html
+++ b/src/app/feature/alquiler/components/alquiler/alquiler.component.html
@@ -1,7 +1,17 @@
-<div>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptas in totam dolore, praesentium hic incidunt saepe voluptatibus perferendis voluptate velit nulla labore earum ducimus. Ea mollitia assumenda fuga dignissimos!
+<div class="container">
 
-    <div class="d-grid gap-2">
-        <a id="crear_alquiler" class="btn btn-success" routerLink="/crear-alquiler">Crear Alquiler</a>
+    <div class="row">
+        <br>
+        <h2>Alquiler de motocicletas</h2>
+
+        <p></p>
+
+        <div class="d-grid gap-2">
+            <a id="crear_alquiler" class="btn btn-success" routerLink="/crear-alquiler">Crear Alquiler</a>
+        </div>
     </div>
+
+    <br>
+    <app-listar-alquiler></app-listar-alquiler>
+
 </div>
