--- a/src/app/feature/alquiler/components/listar-alquiler/listar-alquiler.component.html
+++ b/src/app/feature/alquiler/components/listar-alquiler/listar-alquiler.component.html
@@ -9,6 +9,7 @@
         <h3><span class="badge bg-dark">Fecha devolucion: {{ alquiler.fechaDevolucion }}</span></h3>
         <h5><span class="badge bg-dark">Salida de la ciudad: {{ alquiler.planeaSalirDeLaCiudad ? 'Si' : 'No' }}</span></h5>
         <h5><span class="badge bg-dark">Parrilero: {{ alquiler.planeaLlevarParrilero ? 'Si' : 'No' }}</span></h5>
+        <app-borrar-alquiler [idAlquiler]=alquiler.id></app-borrar-alquiler>
         <!--app-crear-compra [libroId] = libro.id></app-crear-compra-->
       </div>
     </div>
