Componentes del modulo factura

--- a/src/app/feature/alquiler/components/crear-alquiler/crear-alquiler.component.html
+++ b/src/app/feature/alquiler/components/crear-alquiler/crear-alquiler.component.html
@@ -30,9 +30,9 @@
             placeholder="Cuantos dias planea alquilar la motocicleta"
           />
         </div>
-        <div class="col-xs-12 col-md-6 mb-3">
+        <div class="col-12 mb-3">
             <div class=" form-check form-switch">
-                <label for="planeaSalirDeLaCiudad" class="form-check-label">Cantidad de dias a alquilar</label>
+                <label for="planeaSalirDeLaCiudad" class="form-check-label">¿Planea salir de la ciudad?</label>
                 <input
                 type="checkbox"
                 class="form-check-input"
@@ -43,9 +43,9 @@
                 />
             </div>
         </div>
-        <div class="col-xs-12 col-md-6 mb-3">
+        <div class="col-12 mb-3">
             <div class=" form-check form-switch">
-                <label for="planeaLlevarParrillero" class="form-check-label">Cantidad de dias a alquilar</label>
+                <label for="planeaLlevarParrillero" class="form-check-label">¿Planea llevar parrillero/a?</label>
                 <input
                 type="checkbox"
                 class="form-check-input"
