--- a/src/app/feature/factura/components/crear-factura/crear-factura.component.html
+++ b/src/app/feature/factura/components/crear-factura/crear-factura.component.html
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-warning" (click)="onClick()">Facturar</button>
+<button id="facturar" type="button" class="btn btn-warning" (click)="onClick()">Facturar</button>
