--- a/src/app/feature/factura/components/listar-factura/listar-factura.component.html
+++ b/src/app/feature/factura/components/listar-factura/listar-factura.component.html
@@ -15,7 +15,7 @@
   </div>
   <div *ngIf="!(listaFacturas | async)?.length">
     <div id="vacio" class="alert alert-danger" role="alert">
-      Aun no se ah creado ninguna factura en el sistema
+      Aun no se a creado ninguna factura en el sistema
     </div>
   </div>
 </div>
